--- a/Sign in.css
+++ b/Sign in.css
@@ -13,21 +13,27 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #DCAE96;
+    background: url(Images/background.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 form{
     width: 25rem;
     height: 25rem;
     display: flex;
+    background: rgb(241, 224, 224);
     flex-direction: column;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .50);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .9);
     border-radius: 30px;
 }
 
 h1{
     font-size: 30px;
     text-align: center;
+    margin-top: 9%;
+    margin-bottom: 10%;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
     letter-spacing: 2px;
     margin-bottom: 5%;
@@ -37,14 +43,14 @@ h1{
 label{
     font-size: 18px;
     margin-left: 10%;
-    opacity: .8;
+    opacity: .9;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
 
 }
 input{
     width: 80%;
     margin: 5% auto;
-    margin-bottom: 8%;
+    margin-bottom: 5%;
     border: none;
     outline: none;
     background: transparent;
@@ -57,20 +63,24 @@ input{
 button{
     width: 50%;
     margin: 3% auto;
+    text-align: center;
     font-size: 15px;
-    opacity: .7;
-    background: #eeb69a;
+    opacity: .9;
+    color: aliceblue;
+    background: #3a3a99;
+    margin-left: 10%;
+    margin-bottom: 5%;
     padding: 10px 30px;
     border: none;
     outline: none;
-    box-shadow: 0 8px 32px 0 rgba(15, 17, 45, 0.5);
+    box-shadow: 0 8px 32px 0 rgba(15, 17, 45, 0.6);
     border-radius: 30px;
     cursor: pointer;
 }
 
 a{
     font-size: 12px;
-    text-align: center;
+    margin-left: 10%;
     color: #000000;
     opacity: .9;
     cursor: pointer;
