--- a/Washingmachine.css
+++ b/Washingmachine.css
@@ -56,17 +56,17 @@ section{
 }
 
 
-#AirConditioners{
+#Washingmachine{
     background: #DCAE96;
   }
   
-#AirConditioners h1{
+#Washingmachine h1{
     font-size: 50px;
     letter-spacing: 2px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#AirConditioners h4{
+#Washingmachine h4{
     font-size: 15px;
 }
   
