--- a/Add Address.css
+++ b/Add Address.css
@@ -21,25 +21,23 @@ body{
 }
 
 form{
-    width: 300px;
-    height: 500px;
-    background: rgb(241, 224, 224);
+    width: fit-content;
+    height: fit-content;
     display: flex;
+    background: rgb(241, 224, 224);
     flex-direction: column;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .50);
+    box-shadow: 0 8px 32px 0 rgba(15, 17, 45, 0.9);
     border-radius: 30px;
-  
 }
 
 h1{
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
+    margin-top: 9%;
+    margin-bottom: 10%;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
     letter-spacing: 2px;
-    margin-bottom: 9%;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 20%;
+    margin-bottom: 5%;
     opacity: .7;
 }
 
@@ -51,7 +49,7 @@ label{
 
 }
 input{
-    width: 80%;
+    width: 40%;
     margin: 5% auto;
     margin-bottom: 8%;
     border: none;
@@ -65,15 +63,24 @@ input{
 
 button{
     width: fit-content;
-    margin-left: 30%;
+    margin: 10%;
+    text-align: center;
     font-size: 15px;
-    opacity: .7;
+    opacity: .9;
     color: aliceblue;
     background: #3a3a99;
+    margin-left: 10%;
     padding: 10px 30px;
     border: none;
     outline: none;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .50);
+    box-shadow: 0 8px 32px 0 rgba(15, 17, 45, 0.6);
     border-radius: 30px;
+    cursor: pointer;
+}
+
+a{
+    text-align: center;
+    color: #000000;
+    opacity: .9;
     cursor: pointer;
 }
