--- a/AddToCart.css
+++ b/AddToCart.css
@@ -13,40 +13,37 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background:  url(Images/background.avif);
+    background: url(Images/background.avif);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
     position: relative;
 }
 
 form{
-    width: 300px;
-    height: 500px;
-    background: rgb(241, 224, 224);
+    width: fit-content;
+    height: fit-content;
     display: flex;
+    background: rgb(241, 224, 224);
     flex-direction: column;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .50);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .9);
     border-radius: 30px;
-  
 }
 
 h1{
     font-size: 25px;
     text-align: center;
+    margin-top: 9%;
+    margin-bottom: 10%;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
     letter-spacing: 2px;
-    margin-bottom: 9%;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 20%;
+    margin-bottom: 5%;
     opacity: .7;
 }
 
 label{
-    font-size: 15px;
+    font-size: 18px;
     margin-left: 10%;
-    opacity: .8;
+    opacity: .9;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
 
 }
@@ -65,15 +62,28 @@ input{
 
 button{
     width: fit-content;
-    margin-left: 30%;
-    font-size: 15px;
-    opacity: .7;
+    margin: 3% auto;
+    text-align: center;
+    font-size: 12px;
+    opacity: .9;
     color: aliceblue;
     background: #3a3a99;
+    margin-left: 13%;
+    margin-top: 0%;
+    margin-bottom: 5%;
     padding: 10px 30px;
     border: none;
     outline: none;
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, .50);
+    box-shadow: 0 8px 32px 0 rgba(15, 17, 45, 0.6);
     border-radius: 30px;
     cursor: pointer;
+}
+
+a{
+    font-size: 12px;
+    margin-left: 13%;
+    color: #000000;
+    opacity: .9;
+    cursor: pointer;
+    margin-bottom: 8%
 }
