--- a/Furnitures.css
+++ b/Furnitures.css
@@ -56,17 +56,17 @@ section{
 }
 
 
-#AirConditioners{
+#homedecor{
     background: #DCAE96;
   }
   
-#AirConditioners h1{
+#homedecor h1{
     font-size: 50px;
     letter-spacing: 2px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#AirConditioners h4{
+#homedecor h4{
     font-size: 15px;
 }
   
