--- a/Refrigerator.css
+++ b/Refrigerator.css
@@ -56,17 +56,17 @@ section{
 }
 
 
-#AirConditioners{
+#Refrigerator{
     background: #DCAE96;
   }
   
-#AirConditioners h1{
+#Refrigerator h1{
     font-size: 50px;
     letter-spacing: 2px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#AirConditioners h4{
+#Refrigerator h4{
     font-size: 15px;
 }
   
