--- a/WelcomePage.css
+++ b/WelcomePage.css
@@ -117,6 +117,13 @@ section{
 
 }
 
+.btn-outline-dark {
+  background-color: #e1bca8 !important;
+  border-color: rgb(0, 0, 0) !important;
+  border-width: 2px !important;
+}
+
+
 
 #footer{
   color: #DCAE96;
