--- a/Refrigerator.css
+++ b/Refrigerator.css
@@ -16,6 +16,11 @@
   background-color: rgb(33, 32, 32);
 }
 
+#search{
+  position: relative !important;
+  left: 10% !important;
+}
+
 
 #navbarSupportedContent a{
   color: #DCAE96;
@@ -83,3 +88,6 @@ section{
     margin: 20px 60px;
 }
 
+#rendering{
+  image-rendering: crisp-edges;
+}
